# Sentiment-aspect-based

./: README.md  classifier.py  pyproject.toml  tester.py
