[tool.poetry]
name = "sentiment-transformers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.4.3"
scikit-learn = "^1.3.2"
torch = "^2.1.2"
numpy = "^1.26.3"
transformers = "^4.36.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
